# opencl_prototypes

EigenValue/: CMakeLists.txt
first_try/: CMakeLists.txt  clext.h  kernel.cl  list_devices.cpp  main.cpp
